Fix gaps in menu, add hover eff in footer menu

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -111,9 +111,15 @@
       gap: 10px;
       margin-bottom: 0;
     }
+
+    @include onDesktop {
+      margin-top: 0;
+    }
   }
 
   &__menu-item {
+    @include hover(transform, scale(1.05));
+    
     @include onTablette {
       display: flex;
       padding: 0;
