--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -83,7 +83,7 @@
     }
     @include onDesktop {
       height: max-content;
-      margin-bottom: 70px;
+      margin-bottom: 50px;
     }
   }
 
@@ -100,6 +100,7 @@
     }
     @include onDesktop {
       height: max-content;
+      margin-bottom: 50px;
     }
   }
 
@@ -120,7 +121,7 @@
     @include onDesktop {
       grid-column: 1 / 6;
       grid-row: 3 / 3;
-      gap: 60px;
+      gap: 30px;
       font-size: 48px;
       line-height: 58px;
     }
