--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -22,21 +22,12 @@
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 30px;
     background-color: $c-green;
     color: $c-white;
 
     @include onTablette {
       order: 2;
     }
-  }
-
-  &__lang-option {
-    font-size: 10px;
-    font-weight: 500;
-    border: 1px solid transparent;
-    border-radius: 0;
-    padding: 5px;
-    min-height: 2em;
   }
 }
